<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.made.uellisson.teste_dev_zapimoveis.fragments.Fragment_Contato">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/et_nome"
                android:autoText="false"
                android:hint="@string/nome" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/et_email"
                android:layout_weight="0.07"
                android:hint="@string/email" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/et_telefone"
                android:layout_weight="0.53"
                android:hint="@string/telefone" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:text="@string/msg_anuncio"
                android:id="@+id/et_msg_anuncio" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:text="@string/cancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bt_cancelar"
                android:layout_marginRight="40dp" />

            <Button
                android:text="@string/enviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bt_enviar" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
