<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.made.uellisson.teste_dev_zapimoveis.fragments.Frag_Detalhes_Imoveis">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/iv_foto"
                android:layout_weight="1" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                android:scrollbarAlwaysDrawVerticalTrack="false">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/ic_media_previous"
                    android:layout_marginRight="50dp"
                    android:id="@+id/ib_prev" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/ic_media_next"
                    android:id="@+id/ib_next" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background_normal">

                <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:textSize="18sp"
                    tools:text="@string/preco_venda" />

                <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_preco_venda"
                    android:textSize="24sp"
                    android:textColor="@android:color/background_dark"
                    tools:text="@string/preco_venda" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:background="@android:drawable/editbox_background_normal"
                android:layout_marginTop="5dp">

                <TextView
                    android:text="@string/descricao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:id="@+id/tv_tit_descricao"
                    android:textColor="@android:color/background_dark" />

                <TextView
                    android:text="@string/descricao_completa"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/tv_descricao"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:background="@android:drawable/editbox_background_normal"
                android:layout_marginTop="5dp">

                <TextView
                    android:text="@string/dados_anuncio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:id="@+id/tv_tit_anuncio"
                    android:textColor="@android:color/background_dark" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/anunciante"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView14"
                        android:paddingRight="5dp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:text="@string/anunciante"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_anunciante"
                        android:textSize="14sp"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/Codigo_Anunciante"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView15"
                        android:paddingRight="5dp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:text="@string/Codigo_Anunciante"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:id="@+id/tv_cod_anunciante"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/data_Atualizacao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView16"
                        android:paddingRight="5dp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:text="@string/data_Atualizacao"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:id="@+id/tv_data_atualizacao"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:text="@string/codigo_Imovel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView17"
                        android:paddingRight="5dp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:text="@string/codigo_Imovel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_cod_imovel"
                        android:textSize="14sp"
                        android:layout_weight="1" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:background="@android:drawable/editbox_background_normal"
                android:layout_marginTop="5dp">

                <TextView
                    android:text="@string/subtipo_Imovel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_subtipo_Imovel"
                    android:textSize="24sp"
                    android:textColor="@android:color/background_dark" />

                <TextView
                    android:text="@string/endereco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_end_completo"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
